# message-proxy

./: CMakeLists.txt  README.md
cmake/: AosCoreAPI.cmake  AosCoreCommon.cmake  FindXenvchan.cmake
src/: CMakeLists.txt  version.hpp.in
src/app/: CMakeLists.txt  app.cpp  app.hpp
src/cmclient/: cmclient.cpp  cmclient.hpp  types.hpp
src/communication/: CMakeLists.txt  clientsocket.cpp  clientsocket.hpp  cmconnection.cpp  cmconnection.hpp  communicationchannel.cpp  communicationchannel.hpp  communicationmanager.cpp  communicationmanager.hpp  iamconnection.cpp  iamconnection.hpp  openchannel.cpp  openchannel.hpp  pipe.cpp  pipe.hpp  pipe_test.cpp  pipe_test.hpp  securechannel.cpp  securechannel.hpp  socket.cpp  socket.hpp  types.hpp  utils.hpp  vchan.cpp  vchan.hpp  vchanmanager.cpp  vchanmanager.hpp  vchanmanagerstub.cpp
src/config/: config.cpp  config.hpp
src/downloader/: downloader.cpp  downloader.hpp
src/filechunker/: filechunker.cpp  filechunker.hpp
src/iamclient/: iamclient.cpp  iamclient.hpp  publicnodeclient.cpp  publicnodeclient.hpp  publicservicehandler.cpp  publicservicehandler.hpp  types.hpp
src/imageunpacker/: imageunpacker.cpp  imageunpacker.hpp  serviceimage.cpp  serviceimage.hpp
src/logger/: logmodule.hpp
tests/cmclient/: cmclient_test.cpp
tests/cmclient/stubs/: smservice.hpp
tests/communication/: CMakeLists.txt  communication_open_test.cpp  communication_secure_test.cpp
tests/communication/stubs/: transport.hpp
tests/config/: config_test.cpp
tests/downloader/: downloader_test.cpp
tests/downloader/stubs/: httpserver.hpp
tests/filechunker/: filechunker_test.cpp
tests/iamclient/: iamclient_test.cpp
tests/iamclient/stubs/: iamserver.hpp
tests/imageunpacker/: imageunpacker_test.cpp
